twitter link fix

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/AchalS-iglu"><i class="fab fa-fw fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/iglushrek/"><i class="fab fa-fw fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/achal-singhal-3b6b33188/"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/igluboi"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/iglushrek"><i class="fab fa-fw fa-twitter"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
